--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -1,10 +1,8 @@
-//
 // Search input and autocomplete
-//
 
 .search {
   position: relative;
-  z-index: 3;
+  z-index: 2;
   flex-grow: 1;
   height: $sp-10;
   padding: $sp-2;
@@ -12,7 +10,7 @@
 
   @include mq(md) {
     position: relative !important;
-    width: auto !important;
+    width: $search-results-width !important;
     height: 100% !important;
     padding: 0;
     transition: none;
@@ -21,7 +19,7 @@
 
 .search-input-wrap {
   position: relative;
-  z-index: 3;
+  z-index: 2;
   height: $sp-8;
   overflow: hidden;
   border-radius: $border-radius;
@@ -48,6 +46,7 @@
   padding-bottom: $sp-2;
   padding-left: #{$gutter-spacing-sm + $sp-5};
   font-size: 16px;
+  color: $body-text-color;
   background-color: $search-background-color;
   border-top: 0;
   border-right: 0;
@@ -66,7 +65,6 @@
 
   &:focus {
     outline: 0;
-    caret-color: $body-text-color;
 
     + .search-label .search-icon {
       color: $link-color;
@@ -152,7 +150,6 @@
     padding-right: $sp-2;
     vertical-align: top;
   }
-  
 }
 
 .search-result-doc {
@@ -253,7 +250,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 1;
   width: 0;
   height: 0;
   background-color: rgba(0, 0, 0, 0.3);
@@ -284,8 +281,7 @@
 
   .search-input {
     background-color: $search-background-color;
-    color: $body-text-color;
-    caret-color: $body-text-color;
+
     @include mq(md) {
       padding-left: 2.3rem;
     }
